# ocean-tunnels-nccs

./: README.md  pyproject.toml
data/: ce09ospm_gridded_profile_climatology_coefficients.nc
notebooks/: ce01issp_bottom_density.ipynb  compare_model_observation.ipynb  oceanic_pathway_sigma_levels.ipynb  oregon_shelf_profilers.ipynb  washington_gridded_data_sigma_depths.ipynb
notebooks/python/: ce01issp_bottom_density.py  compare_model_observation.py  oceanic_pathway_sigma_levels.py  oregon_shelf_profilers.py  washington_gridded_data_sigma_depths.py
scripts/: __init__.py  calculate_monthly_mean_isopycnal_depth.py  ce09_profiler.py  compute_isopycnal_depth.py  compute_mixed_layer_depth.py  compute_monthly_mean_isopycnal_depth.py  compute_z_levels.py  oceanic_pathways_model.py  process_isopycnal_depths.py  utils.py
