[project]
name = "analysis"
version = "0.1.0"
readme = "README.md"
requires-python = ">3.12"
dependencies = [
    "cartopy>=0.25.0",
    "dask>=2025.11.0",
    "gsw>=3.6.20",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
    "xarray[accel,io,parallel]>=2025.10.1",
]
authors = [{ name = "Andrew Scherer", email = "andrew@sourcedepth.com" }]
license = "MIT"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "scripts" }

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "T201",   # print statements in code
    "RET504", # unnecessary assignment for return
    "D203",   # incorrect blank line before class
    "D213",   # multi-line summary second line
    "CPY001", # missing copyright notice
]

[tool.ruff.lint.isort]
known-first-party = [
    "utils",
    "compute_z_levels",
    "compute_isopycnal_depth",
    "calculate_monthly_mean_isopycnal_depth",
]
